edition 2.0 build switch and feedback section, refactor code

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,3 +8,5 @@
 @import "./partials/section-get-free-consult/index";
 @import "./partials/section-worthy-choice/index";
 @import "./partials/section-dedicated-staff/index";
+@import "./partials//section-prices/index";
+@import "./partials/section-customers-say/index";
