--- a/src/styles/partials/section-customers-say/_section.scss
+++ b/src/styles/partials/section-customers-say/_section.scss
@@ -1,7 +1,5 @@
-.section-worthy-choise {
+.section-customers-say {
   @media screen and(min-width: $mobile) {
     padding-bottom: 200px;
-    isolation: isolate;
-    position: relative;
   }
 }
