--- a/src/styles/partials/section-step-by-step/_step-list-container.scss
+++ b/src/styles/partials/section-step-by-step/_step-list-container.scss
@@ -12,34 +12,35 @@
         &:last-child {
           margin-bottom: 0;
         }
-      }
-      .item-number-container {
-        width: 38px;
-        height: 38px;
-        display: table-cell;
-        vertical-align: middle;
-        padding-top: 10px;
-        background-image: url("../../../svg/number-wrapper.svg");
-        background-size: contain;
-        background-repeat: no-repeat;
-        margin-right: 15px;
-        p {
-          @include standartTitle(24px, 1);
-          text-align: center;
+        &:nth-child(3) {
+          p:not(:first-child) {
+            padding-left: 20px;
+          }
         }
-      }
-      .item-title {
-        max-width: 128px;
-        @include standartTitle(18px, 120%);
-        margin-bottom: 20px;
-      }
-      .item-descr-container {
-        min-width: 100%;
-        p {
-          @include standartDescription(12px, 170%);
-          span {
-            display: block;
-            padding-left: 30px;
+        .item-number-container {
+          width: 38px;
+          height: 38px;
+          display: table-cell;
+          vertical-align: middle;
+          padding-top: 10px;
+          background-image: url("../../../svg/number-wrapper.svg");
+          background-size: contain;
+          background-repeat: no-repeat;
+          margin-right: 15px;
+          p {
+            @include standartTitle(24px, 1);
+            text-align: center;
+          }
+        }
+        .item-title {
+          max-width: 128px;
+          @include standartTitle(18px, 120%);
+          margin-bottom: 20px;
+        }
+        .item-descr-container {
+          min-width: 100%;
+          p {
+            @include standartDescription(12px, 170%);
           }
         }
       }
