tablet and mobile markup

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,3 +10,5 @@
 @import "./partials/section-dedicated-staff/index";
 @import "./partials//section-prices/index";
 @import "./partials/section-customers-say/index";
+@import "./partials/section-contact-form/index";
+@import "./partials/footer/index";
