--- a/src/styles/partials/app-bar/_burger-menu.scss
+++ b/src/styles/partials/app-bar/_burger-menu.scss
@@ -7,6 +7,12 @@
       padding-left: 19px;
       .burger-menu-btn {
         background-color: transparent;
+        .burger-menu-svg * {
+          transition: 0.3s ease-out;
+        }
+        &:hover .burger-menu-svg * {
+          stroke: $accentYellow;
+        }
       }
     }
   }
