--- a/src/styles/partials/app-bar/_social-links.scss
+++ b/src/styles/partials/app-bar/_social-links.scss
@@ -1,7 +1,34 @@
 .header {
-  .social-links-container {
+  .social-link-list {
     @media screen and(min-width: $mobile) {
       display: none;
+    }
+    @media screen and(min-width: $tablet) {
+      display: flex;
+      border-right: 2px solid white;
+      padding-left: 20px;
+      padding-right: 20px;
+      .social-link-item {
+        margin-right: 20px;
+        display: flex;
+        align-items: center;
+        a {
+          display: block;
+          svg {
+            display: block;
+            & * {
+              transition: 0.3s ease-out;
+            }
+          }
+
+          &:hover svg * {
+            fill: $accentYellow;
+          }
+        }
+        &:last-child {
+          margin-right: 0;
+        }
+      }
     }
   }
 }
