--- a/src/styles/partials/hero-section/_title.scss
+++ b/src/styles/partials/hero-section/_title.scss
@@ -18,5 +18,8 @@
         -webkit-text-stroke: 0.1px white;
       }
     }
+    @media screen and(min-width: $tablet) {
+      width: 555px;
+    }
   }
 }
