--- a/src/styles/partials/section-support-ua/_description-container.scss
+++ b/src/styles/partials/section-support-ua/_description-container.scss
@@ -3,9 +3,12 @@
     @media screen and(min-width: $mobile) {
       margin-bottom: 30px;
       p {
-        font-family: "AbroSans-Regular";
-        font-size: 12px;
-        line-height: 170%;
+        @include standartDescription(12px, 170%);
+      }
+    }
+    @media screen and(min-width: $tablet) {
+      p {
+        font-size: 18px;
       }
     }
   }
