--- a/src/styles/utils/_container.scss
+++ b/src/styles/utils/_container.scss
@@ -2,11 +2,19 @@
   @media screen and (min-width: $mobile) {
     width: 345px;
   }
+  @media screen and (min-width: $mobileMax) {
+    width: 542px;
+    padding-right: 15px;
+    padding-left: 15px;
+  }
   @media screen and (min-width: $tablet) {
-    width: 768px;
+    max-width: 748px;
+  }
+  @media screen and (min-width: $tablet) {
+    width: 962px;
   }
   @media screen and (min-width: $desktop) {
-    width: 1200px;
+    width: 1170px;
   }
   @media screen and (min-width: $fullHD) {
     width: 1920px;
