--- a/src/styles/partials/app-bar/_get-consult.scss
+++ b/src/styles/partials/app-bar/_get-consult.scss
@@ -14,6 +14,32 @@
           font-weight: 700;
           color: $blackContent;
         }
+        &:hover {
+          border: 2px dashed white;
+        }
+      }
+    }
+    @media screen and(min-width: $tablet) {
+      .get-consult-btn {
+        width: 200px;
+        height: 40px;
+        p {
+          font-size: 16px;
+        }
+      }
+    }
+    @media screen and(min-width: $tabletMax) {
+      .get-consult-btn {
+        width: 240px;
+      }
+    }
+    @media screen and(min-width: $desktop) {
+      padding-right: 20px;
+      padding-left: 20px;
+      .get-consult-btn {
+        p {
+          font-size: 18px;
+        }
       }
     }
   }
