--- a/src/styles/partials/app-bar/_logo.scss
+++ b/src/styles/partials/app-bar/_logo.scss
@@ -12,5 +12,20 @@
         fill: white;
       }
     }
+    @media screen and(min-width: $tabletMax) {
+      padding-right: 19px;
+      padding-left: 19px;
+      .logo {
+        width: 120px;
+        height: 28px;
+      }
+    }
+    @media screen and(min-width: $desktop) {
+      padding-right: 20px;
+      .logo {
+        width: 168px;
+        height: 40px;
+      }
+    }
   }
 }
