--- a/src/styles/partials/footer/_index.scss
+++ b/src/styles/partials/footer/_index.scss
@@ -17,4 +17,25 @@
       }
     }
   }
+  @media screen and(min-width: $mobile) {
+    a,
+    p {
+      font-size: 16px;
+    }
+  }
+  @media screen and(min-width: $desktop) {
+    .container {
+      position: absolute;
+      bottom: 0;
+      padding-bottom: 20px;
+      display: flex;
+      flex-direction: row-reverse;
+      justify-content: space-between;
+    }
+    a {
+      margin-left: 0;
+      margin-right: 0;
+      margin-top: 0;
+    }
+  }
 }
