--- a/src/styles/partials/section-contact-form/_form.scss
+++ b/src/styles/partials/section-contact-form/_form.scss
@@ -1,48 +1,118 @@
 .section-contact-form {
-  @media screen and(min-width: $mobile) {
-    .form-title {
-      @include standartTitle(24px, 120%);
-      margin-bottom: 15px;
-    }
-    .contact-form {
+  .contact-form-container {
+    @media screen and(min-width: $mobile) {
       margin-bottom: 34px;
-      input,
-      textarea {
-        width: 100%;
-        padding: 13px 10px;
-        margin-bottom: 25px;
-        border: 1px solid rgba(255, 255, 255, 0.2);
-        background-color: transparent;
-        color: $accentYellow;
-        @include standartDescription(12px, 120%);
-        &::placeholder {
-          color: rgba(255, 255, 255, 0.5);
-        }
-        &:active,
-        &:focus {
-          outline: none;
-          border: 1px solid $accentYellow;
-        }
-      }
-      textarea {
-        height: 190px;
-      }
-      .submit-btn {
-        width: 163px;
-        display: block;
-        padding-top: 6px;
-        padding-bottom: 6px;
-        text-align: center;
+      .form-title {
         @include standartTitle(24px, 120%);
-        margin-right: auto;
-        margin-left: auto;
-        color: $accentYellow;
-        background-color: transparent;
-        border: 1px solid $accentYellow;
-        transition: 0.3s ease-out;
-        &:hover {
-          background-color: $accentYellow;
-          color: $blackContent;
+        margin-bottom: 15px;
+      }
+      .contact-form {
+        input,
+        textarea {
+          width: 100%;
+          padding: 13px 10px;
+          margin-bottom: 25px;
+          border: 1px solid rgba(255, 255, 255, 0.2);
+          background-color: transparent;
+          color: $accentYellow;
+          @include standartDescription(12px, 120%);
+          &::placeholder {
+            color: rgba(255, 255, 255, 0.5);
+          }
+          &:active,
+          &:focus {
+            outline: none;
+            border: 1px solid $accentYellow;
+          }
+        }
+        input:nth-child(3) {
+          margin-bottom: 0;
+        }
+        textarea {
+          height: 190px;
+        }
+        .input-container {
+          margin-bottom: 25px;
+        }
+        .submit-btn {
+          width: 163px;
+          display: block;
+          padding-top: 6px;
+          padding-bottom: 6px;
+          text-align: center;
+          @include standartTitle(24px, 120%);
+          margin-right: auto;
+          margin-left: auto;
+          color: $accentYellow;
+          background-color: transparent;
+          border: 1px solid $accentYellow;
+          transition: 0.3s ease-out;
+          &:hover {
+            background-color: $accentYellow;
+            color: $blackContent;
+          }
+        }
+      }
+    }
+    @media screen and(min-width: $tablet) {
+      .contact-form {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        .input-container {
+          width: 45%;
+        }
+        textarea {
+          width: 50%;
+          height: inherit;
+          font-size: 16px;
+        }
+        input {
+          font-size: 16px;
+        }
+      }
+    }
+    @media screen and(min-width: $desktop) {
+      width: 50%;
+      margin-bottom: 0;
+      .form-title {
+        font-size: 32px;
+      }
+      .contact-form {
+        width: 100%;
+        flex-direction: column;
+        .input-container {
+          width: 100%;
+        }
+        textarea {
+          width: 100%;
+          height: 150px;
+          padding-left: 15px;
+          font-size: 18px;
+        }
+        input {
+          font-size: 18px;
+          padding-left: 15px;
+        }
+      }
+    }
+    @media screen and(min-width: $fullHD) {
+      .form-title {
+        font-size: 36px;
+        margin-bottom: 18px;
+      }
+      .contact-form {
+        .input-container {
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: space-between;
+        }
+        input {
+          width: 46%;
+        }
+        .submit-btn {
+          height: 52px;
+          font-size: 36px;
         }
       }
     }
