--- a/src/styles/partials/section-contact-form/_social-link-container.scss
+++ b/src/styles/partials/section-contact-form/_social-link-container.scss
@@ -1,23 +1,48 @@
 .section-contact-form {
   .social-link-container {
     @media screen and(min-width: $mobile) {
+      .social-link-title {
+        @include standartTitle(24px, 120%);
+        margin-bottom: 30px;
+      }
       .social-link-list {
         .social-link-item {
           margin-bottom: 30px;
           a {
             display: flex;
             align-items: center;
+            margin-left: unset;
             p {
               @include standartTitle(24px, 120%);
               display: block;
               line-height: 1;
               margin-left: 15px;
+              transition: 0.3s ease-out;
+            }
+            svg * {
+              transition: 0.3s ease-out;
+            }
+            &:hover p,
+            &:hover svg * {
+              color: $accentYellow;
+              fill: $accentYellow;
             }
           }
+          &:last-child {
+            margin-bottom: 0;
+          }
         }
-        &:last-child {
-          margin-bottom: 0;
-        }
+      }
+    }
+    @media screen and(min-width: $desktop) {
+      width: 38%;
+      .social-link-title {
+        font-size: 32px;
+      }
+    }
+    @media screen and(min-width: $fullHD) {
+      .social-link-title {
+        font-size: 36px;
       }
     }
   }
