--- a/src/styles/partials/section-contact-form/_title.scss
+++ b/src/styles/partials/section-contact-form/_title.scss
@@ -7,5 +7,18 @@
         @include standartTitle(36px, 120%);
       }
     }
+    @media screen and(min-width: $desktop) {
+      min-width: 100%;
+      margin-bottom: 40px;
+      .title {
+        font-size: 60px;
+      }
+    }
+    @media screen and(min-width: $fullHD) {
+      margin-bottom: 50px;
+      .title {
+        font-size: 100px;
+      }
+    }
   }
 }
