--- a/src/styles/partials/section-customers-say/_feedback-list.scss
+++ b/src/styles/partials/section-customers-say/_feedback-list.scss
@@ -14,5 +14,49 @@
         }
       }
     }
+    @media screen and(min-width: $tablet) {
+      .feedback-item {
+        .description {
+          @include standartDescription(16px, 170%);
+        }
+      }
+    }
+    @media screen and(min-width: $tablet) {
+      .feedback-item {
+        margin-bottom: 50px;
+        .item-title {
+          margin-bottom: 10px;
+        }
+        .description {
+          max-width: 700px;
+          padding-left: 120px;
+        }
+      }
+    }
+    @media screen and(min-width: $desktop) {
+      display: flex;
+      justify-content: space-between;
+      .feedback-item {
+        width: 30%;
+        .item-title {
+          font-size: 32px;
+        }
+        .description {
+          font-size: 18px;
+          padding-left: 0;
+        }
+      }
+    }
+    @media screen and(min-width: $fullHD) {
+      .feedback-item {
+        .item-title {
+          font-size: 48px;
+          margin-bottom: 30px;
+        }
+        .description {
+          font-size: 24px;
+        }
+      }
+    }
   }
 }
