--- a/src/styles/partials/section-customers-say/_section.scss
+++ b/src/styles/partials/section-customers-say/_section.scss
@@ -2,4 +2,11 @@
   @media screen and(min-width: $mobile) {
     padding-bottom: 200px;
   }
+  @media screen and(min-width: $desktop) {
+    padding-bottom: 0;
+    padding-top: 50px;
+  }
+  @media screen and(min-width: $fullHD) {
+    padding-top: 60px;
+  }
 }
