--- a/src/styles/partials/section-dedicated-staff/_title.scss
+++ b/src/styles/partials/section-dedicated-staff/_title.scss
@@ -6,5 +6,15 @@
         @include standartTitle(36px, 120%);
       }
     }
+    @media screen and(min-width: $desktop) {
+      .title {
+        font-size: 60px;
+      }
+    }
+    @media screen and(min-width: $fullHD) {
+      .title {
+        font-size: 100px;
+      }
+    }
   }
 }
