--- a/src/styles/partials/section-prices/_price-list.scss
+++ b/src/styles/partials/section-prices/_price-list.scss
@@ -14,6 +14,7 @@
         .description {
           text-align: center;
           margin-bottom: 15px;
+          @include standartDescription(16px, 170%);
         }
         .price {
           text-align: center;
@@ -21,6 +22,68 @@
         }
         &:last-child {
           border-bottom: none;
+        }
+      }
+    }
+    @media screen and(min-width: $tabletMax) {
+      .price-item {
+        display: flex;
+        .item-title {
+          width: 300px;
+          text-align: start;
+          margin-right: 30px;
+        }
+        .description {
+          width: 300px;
+          text-align: start;
+        }
+        .price {
+          margin-left: auto;
+        }
+      }
+    }
+    @media screen and(min-width: $desktop) {
+      display: flex;
+      .price-item {
+        width: 25%;
+        display: block;
+        .description {
+          width: 200px;
+          height: 214.1px;
+          font-size: 18px;
+        }
+        &:not(:last-child) {
+          border-right: 2px solid white;
+        }
+        .item-title {
+          width: 100%;
+          height: 76.78px;
+          font-size: 32px;
+          text-align: center;
+        }
+        .price {
+          font-size: 32px;
+        }
+      }
+    }
+    @media screen and(min-width: $fullHD) {
+      .price-item {
+        height: fit-content;
+        padding-top: 50px;
+        padding-bottom: 50px;
+        .item-title {
+          font-size: 48px;
+          height: 116px;
+          margin-bottom: 30px;
+        }
+        .description {
+          width: 100%;
+          text-align: center;
+          padding-left: 20px;
+          padding-right: 20px;
+        }
+        .price {
+          font-size: 48px;
         }
       }
     }
