--- a/src/styles/partials/section-prices/_switcher.scss
+++ b/src/styles/partials/section-prices/_switcher.scss
@@ -1,8 +1,53 @@
 .section-prices {
   .switch {
     @media screen and(min-width: $mobile) {
-      @include switcher;
-      @include backgroundSwitchMobile;
+      position: relative;
+      width: 45px;
+      height: 19px;
+      display: inline-block;
+      background-color: $accentYellow;
+      box-sizing: content-box;
+      border: 0.76px solid #fff;
+      box-shadow: inset 0px 1.52px 1.52px rgba(0, 0, 0, 0.25);
+      border-radius: 38px;
+      input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+        &:checked + .slider::before {
+          transform: translateX(-26px);
+        }
+      }
+      .slider {
+        position: absolute;
+        cursor: pointer;
+        inset: 0;
+        &::before {
+          content: "";
+          position: absolute;
+          width: 19px;
+          height: 19px;
+          right: 0;
+          border-radius: 50%;
+          box-shadow: inset 0px 1.52px 1.52px rgba(0, 0, 0, 0.25);
+          background-color: #fff;
+          transition: ease-out 0.3s;
+        }
+      }
+    }
+    @media screen and(min-width: $desktop) {
+      width: 120px;
+      height: 50px;
+      border: 2px solid #fff;
+      box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+      .slider::before {
+        width: 50px;
+        height: 50px;
+        box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+      }
+      input:checked + .slider::before {
+        transform: translateX(-70px);
+      }
     }
   }
 }
