--- a/src/styles/partials/section-support-ua/_description-container.scss
+++ b/src/styles/partials/section-support-ua/_description-container.scss
@@ -8,7 +8,27 @@
     }
     @media screen and(min-width: $tablet) {
       p {
+        font-size: 16px;
+      }
+    }
+    @media screen and(min-width: $tabletMax) {
+      p {
+        padding-right: 70px;
+        padding-left: 70px;
+      }
+    }
+    @media screen and(min-width: $desktop) {
+      width: 70%;
+      p {
+        padding-right: 0;
+        padding-left: 0;
         font-size: 18px;
+      }
+    }
+    @media screen and(min-width: $fullHD) {
+      width: 1213px;
+      p {
+        font-size: 24px;
       }
     }
   }
