--- a/src/styles/partials/section-support-ua/_section.scss
+++ b/src/styles/partials/section-support-ua/_section.scss
@@ -2,4 +2,16 @@
   @media screen and(min-width: $mobile) {
     padding-bottom: 200px;
   }
+  @media screen and(min-width: $desktop) {
+    padding-top: 50px;
+    padding-bottom: 0;
+    .container {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+    }
+  }
+  @media screen and(min-width: $fullHD) {
+    padding-top: 60px;
+  }
 }
