--- a/src/styles/partials/section-support-ua/_title.scss
+++ b/src/styles/partials/section-support-ua/_title.scss
@@ -5,7 +5,19 @@
       margin-bottom: 30px;
       .title {
         @include standartTitle(36px, 120%);
-        width: 530px;
+      }
+    }
+    @media screen and(min-width: $desktop) {
+      width: 100%;
+      margin-bottom: 40px;
+      .title {
+        font-size: 60px;
+      }
+    }
+    @media screen and(min-width: $fullHD) {
+      margin-bottom: 50px;
+      .title {
+        font-size: 100px;
       }
     }
   }
