--- a/src/styles/partials/section-worthy-choice/_worthy-list.scss
+++ b/src/styles/partials/section-worthy-choice/_worthy-list.scss
@@ -77,5 +77,130 @@
         width: 50%;
       }
     }
+    @media screen and(min-width: $tablet) {
+      .worthy-item {
+        .item-title {
+          font-size: 20px;
+        }
+        .description-container p {
+          font-size: 16px;
+        }
+        &:nth-child(2) {
+          .item-title {
+            width: 200px;
+            &::after {
+              right: 0;
+            }
+          }
+        }
+        &:nth-child(4) {
+          .item-title {
+            width: 170px;
+            &:after {
+              right: -20px;
+            }
+          }
+        }
+        &:nth-child(-n + 4) {
+          margin-bottom: 50px;
+        }
+      }
+    }
+    @media screen and(min-width: $tabletMax) {
+      padding-left: 40px;
+      .worthy-item {
+        width: 33%;
+      }
+    }
+    @media screen and(min-width: $desktop) {
+      padding-left: 0;
+      justify-content: space-between;
+      .worthy-item {
+        width: 18%;
+        .item-title {
+          font-size: 24px;
+          &::after {
+            display: none;
+          }
+        }
+        .description-container p {
+          font-size: 18px;
+        }
+        &:first-child .description-container p {
+          width: 192px;
+        }
+        &:nth-child(2) .description-container p {
+          width: 190px;
+        }
+        &:nth-child(3) {
+          .item-title {
+            width: 100%;
+          }
+          .description-container p {
+            width: 190px;
+          }
+        }
+        &:nth-child(4) .description-container p {
+          width: 190px;
+        }
+      }
+    }
+    @media screen and(min-width: $fullHD) {
+      .worthy-item {
+        .item-title {
+          font-size: 30px;
+          margin-bottom: 30px;
+          &::after {
+            display: block;
+          }
+        }
+        &:first-child {
+          .item-title {
+            width: 144px;
+          }
+          .description-container p {
+            width: 278px;
+          }
+        }
+        &:nth-child(2) {
+          .item-title {
+            width: 221px;
+            &::after {
+              margin-right: -58px;
+            }
+          }
+          .description-container p {
+            width: 284px;
+          }
+        }
+        &:nth-child(3) {
+          .item-title {
+            width: 194px;
+          }
+          .description-container p {
+            width: 242px;
+          }
+        }
+        &:nth-child(4) {
+          .item-title {
+            width: 199px;
+            &::after {
+              margin-right: -48px;
+            }
+          }
+          .description-container p {
+            width: 255px;
+          }
+        }
+        &:nth-child(5) {
+          .item-title {
+            width: 178px;
+          }
+          .description-container p {
+            width: 240px;
+          }
+        }
+      }
+    }
   }
 }
