--- a/src/styles/partials/section-contact-form/_section.scss
+++ b/src/styles/partials/section-contact-form/_section.scss
@@ -3,8 +3,8 @@
     padding-bottom: 130px;
   }
   @media screen and(min-width: $desktop) {
-    padding-bottom: 50px;
-    padding-top: 50px;
+    padding-bottom: 6vh;
+    padding-top: 6vh;
     .container {
       display: flex;
       flex-wrap: wrap;
