--- a/src/styles/partials/section-dedicated-staff/_dedicated-staff-list.scss
+++ b/src/styles/partials/section-dedicated-staff/_dedicated-staff-list.scss
@@ -59,8 +59,8 @@
       display: flex;
       .dedicated-staff-list {
         .dedicated-staff-item {
-          padding-top: 20px;
-          padding-bottom: 20px;
+          padding-top: 3vh;
+          padding-bottom: 3vh;
           padding-right: 40px;
           .description-container p {
             font-size: 18px;
