--- a/src/styles/partials/section-support-ua/_section.scss
+++ b/src/styles/partials/section-support-ua/_section.scss
@@ -3,7 +3,7 @@
     padding-bottom: 200px;
   }
   @media screen and(min-width: $desktop) {
-    padding-top: 50px;
+    padding-top: 6vh;
     padding-bottom: 0;
     .container {
       display: flex;
