--- a/src/styles/partials/section-worthy-choice/_section.scss
+++ b/src/styles/partials/section-worthy-choice/_section.scss
@@ -5,7 +5,7 @@
     position: relative;
   }
   @media screen and(min-width: $desktop) {
-    padding-top: 50px;
+    padding-top: 6vh;
     padding-bottom: 0;
   }
   @media screen and(min-width: $fullHD) {
