--- a/src/styles/partials/section-contact-form/_form.scss
+++ b/src/styles/partials/section-contact-form/_form.scss
@@ -73,26 +73,34 @@
       }
     }
     @media screen and(min-width: $desktop) {
-      width: 50%;
+      width: 67%;
       margin-bottom: 0;
       .form-title {
         font-size: 32px;
       }
       .contact-form {
         width: 100%;
-        flex-direction: column;
+        flex-direction: row;
+        align-items: stretch;
         .input-container {
-          width: 100%;
+          width: 50%;
+          height: fit-content;
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: space-between;
+          margin-bottom: 4vh;
         }
         textarea {
-          width: 100%;
-          height: 150px;
+          width: 47%;
+          height: 25vh;
           padding-left: 15px;
-          font-size: 18px;
+          font-size: min(18px, 2vh);
         }
         input {
-          font-size: 18px;
+          height: 5vh;
+          font-size: min(18px, 2vh);
           padding-left: 15px;
+          margin-bottom: 5vh;
         }
       }
     }
@@ -102,13 +110,16 @@
         margin-bottom: 18px;
       }
       .contact-form {
-        .input-container {
-          display: flex;
-          flex-wrap: wrap;
-          justify-content: space-between;
+        input,
+        textarea {
+          font-size: 24px;
         }
         input {
-          width: 46%;
+          height: 6vh;
+          margin-bottom: 3vh;
+        }
+        textarea {
+          height: 24vh;
         }
         .submit-btn {
           height: 52px;
