--- a/src/styles/partials/section-contact-form/_title.scss
+++ b/src/styles/partials/section-contact-form/_title.scss
@@ -11,7 +11,7 @@
       min-width: 100%;
       margin-bottom: 40px;
       .title {
-        font-size: 60px;
+        font-size: min(60px, 7vh);
       }
     }
     @media screen and(min-width: $fullHD) {
