--- a/src/styles/partials/section-customers-say/_section.scss
+++ b/src/styles/partials/section-customers-say/_section.scss
@@ -4,7 +4,7 @@
   }
   @media screen and(min-width: $desktop) {
     padding-bottom: 0;
-    padding-top: 50px;
+    padding-top: 6vh;
   }
   @media screen and(min-width: $fullHD) {
     padding-top: 60px;
