--- a/src/styles/partials/section-customers-say/_title.scss
+++ b/src/styles/partials/section-customers-say/_title.scss
@@ -21,15 +21,21 @@
       }
     }
     @media screen and(min-width: $desktop) {
-      margin-bottom: 40px;
+      margin-bottom: 4vh;
       .title {
-        width: 80%;
-        font-size: 60px;
+        width: 100%;
+        font-size: min(60px, 7vh);
+        @media screen and(min-height: 747px) {
+          span {
+            display: block;
+          }
+        }
       }
     }
     @media screen and(min-width: $fullHD) {
       margin-bottom: 50px;
       .title {
+        width: 100%;
         font-size: 100px;
       }
     }
