--- a/src/styles/partials/section-get-free-consult/_title.scss
+++ b/src/styles/partials/section-get-free-consult/_title.scss
@@ -23,9 +23,9 @@
       }
     }
     @media screen and(min-width: $desktop) {
-      margin-bottom: 40px;
+      margin-bottom: 4vh;
       .title {
-        @include standartTitle(60px, 120%);
+        font-size: min(60px, 7vh);
       }
     }
     @media screen and(min-width: $fullHD) {
