--- a/src/styles/partials/section-prices/_price-list.scss
+++ b/src/styles/partials/section-prices/_price-list.scss
@@ -47,18 +47,20 @@
       .price-item {
         width: 25%;
         display: block;
+        padding: 20px;
         .description {
-          width: 200px;
-          height: 214.1px;
+          width: 100%;
+          height: 180px;
           font-size: 18px;
         }
         &:not(:last-child) {
           border-right: 2px solid white;
+          border-bottom: none;
         }
         .item-title {
           width: 100%;
-          height: 76.78px;
-          font-size: 32px;
+          height: 5vh;
+          font-size: 24px;
           text-align: center;
         }
         .price {
