--- a/src/styles/partials/section-prices/_switcher.scss
+++ b/src/styles/partials/section-prices/_switcher.scss
@@ -36,10 +36,22 @@
       }
     }
     @media screen and(min-width: $desktop) {
-      width: 120px;
-      height: 50px;
+      width: 80px;
+      height: 33px;
       border: 2px solid #fff;
       box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+      .slider::before {
+        width: 33px;
+        height: 33px;
+        box-shadow: inset 0px 2px 2px rgba(0, 0, 0, 0.25);
+      }
+      input:checked + .slider::before {
+        transform: translateX(-47px);
+      }
+    }
+    @media screen and(min-width: $fullHD) {
+      width: 120px;
+      height: 50px;
       .slider::before {
         width: 50px;
         height: 50px;
