--- a/src/styles/partials/section-step-by-step/_title.scss
+++ b/src/styles/partials/section-step-by-step/_title.scss
@@ -16,9 +16,9 @@
       }
     }
     @media screen and(min-width: $desktop) {
-      margin-bottom: 40px;
+      margin-bottom: 4vh;
       .title {
-        font-size: 60px;
+        font-size: min(60px, 7vh);
       }
     }
     @media screen and(min-width: $fullHD) {
