--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -11,6 +11,14 @@
   left: 0;
   background: rgba(0, 0, 0, 0.65);
   backdrop-filter: blur(15px);
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+.backdrop.is-active {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
 }
 .toolbar-container {
   width: 100vw;
@@ -57,7 +65,7 @@
 @media screen and (min-width: 1200px) {
   .modal-content-container {
     position: absolute;
-    width: 400px;
+    width: 450px;
     min-height: 100%;
     right: 0;
     padding-top: 20px;
@@ -79,6 +87,7 @@
   }
   .modal-link-list .modal-link-item .modal-link {
     display: block;
+    font-size: min(34px, 4vh);
   }
   .modal-link-list .modal-link-item {
     width: fit-content;
