--- a/src/styles/partials/section-worthy-choice/_worthy-list.scss
+++ b/src/styles/partials/section-worthy-choice/_worthy-list.scss
@@ -119,6 +119,7 @@
         width: 18%;
         .item-title {
           font-size: 24px;
+          margin-bottom: 25px;
           &::after {
             display: none;
           }
